--- a/about.html
+++ b/about.html
@@ -360,27 +360,30 @@
                     <div class="row client-feedback-slider">
                       <!-- Testimonial 1 -->
                       <div class="col-lg-6 mb-4">
-                        <div class="feedback-item">
+                        <div class="feedback-item" style="box-shadow: none;">
                           <div class="profile-section">
                             <div class="profile-info">
-                              <img src="path-to-profile-image-1" alt="Oliver Clain" class="profile-pic">
-                              <div class="name-position">
-                                <a href="https://www.linkedin.com/in/username1" target="_blank" class="name-link">
-                                  <span class="name">Oliver Clain</span>
+                              <img src="assets/img/images/andy.png" alt="Oliver Clain" class="profile-andy" style="width: 56px; height: 56px;">
+                              <div class="name-position" style="margin-left: 10px;">
+                                <a href="https://www.linkedin.com/in/andy-ardana-89193a1a4/" target="_blank" class="name-link">
+                                  <span class="name">Andy Ardana</span>
                                   <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" viewBox="0 0 24 24" fill="currentColor">
                                     <path d="M19 0h-14c-2.761 0-5 2.239-5 5v14c0 2.761 2.239 5 5 5h14c2.762 0 5-2.239 5-5v-14c0-2.761-2.238-5-5-5zm-11 19h-3v-11h3v11zm-1.5-12.268c-.966 0-1.75-.79-1.75-1.764s.784-1.764 1.75-1.764 1.75.79 1.75 1.764-.783 1.764-1.75 1.764zm13.5 12.268h-3v-5.604c0-3.368-4-3.113-4 0v5.604h-3v-11h3v1.765c1.396-2.586 7-2.777 7 2.476v6.759z"/>
                                   </svg>
                                 </a>
-                                <p class="position">Product Designer</p>
+                                <p class="position">UI Designer at Eduqat</p>
                               </div>
                             </div>
                           </div>
                           <div class="details">
-                            <p>"We've been using Azrul's Portfolio for over a year now, and I must say, it's been a game-changer for us. The user interface is intuitive and the feature."</p>
+                            <p>"Working with Azrul for over two years has been an inspiring experience. He is a highly skilled and 
+                              professional UI/UX designer whose ideas consistently bring significant impact to the team. His positive 
+                              attitude, collaborative spirit, and ability to inspire others create a great working dynamic. 
+                              Azrul is truly an invaluable asset to any project or team he's part of!"
+                            </p>
                           </div>
                         </div>
                       </div>
-                    
                       <!-- Testimonial 2 -->
                       <div class="col-lg-6 mb-4">
                         <div class="feedback-item">
